modified css code

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <section>
             <h1 class="main-title">Coding Quiz Challenge</h1>
-            <p class="instructions">Try to answer the following code related questions within the time limit. Any increect answeres will deduct time by 10 seconds!</p>
+            <p class="instructions">Try to answer the following code related questions within the time limit. Any incorect answeres will deduct time by 10 seconds!</p>
         </section>
         <hr>
         <section>
