modified js, css, and html codes

--- a/index.html
+++ b/index.html
@@ -9,17 +9,29 @@
   <body>
     <header>
         <a href="">View Highscores</a>
-        <p class="timer">Time:</p>
+        <p class="time">Time: <span class="timer">95</span></p>
     </header>
     <main>
+      <div class="first-page">
         <section>
-            <h1 class="main-title">Coding Quiz Challenge</h1>
-            <p class="instructions">Try to answer the following code related questions within the time limit. Any incorect answeres will deduct time by 10 seconds!</p>
+          <h1 class="main-title">Coding Quiz Challenge</h1>
+          <p class="instructions">Try to answer the following code related questions within the time limit. Any incorect answeres will deduct time by 10 seconds!</p>
         </section>
         <hr>
         <section>
-            <button class="start-quiz">Start Quiz</button>
+          <button class="start-quiz" >Start Quiz</button> 
+        </section>        
+      </div> 
+      <div class="question-block"  style="display: none">
+        <section class="questions">
+          <h2 class="question-text"></h2>
+          <ul class="answer-choices">
+            <!-- this is where your answer choice buttons will populate -->
+            <!-- dynamiclly create the li items with buttons, then appendChild to the ul-->
+          </ul>
         </section>
+      </div>
     </main>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
